<?xml version="1.0"?>

<package format="2">

  <name>dliom</name>
  <version>1.1.1</version>
  <description>Direct LiDAR-Inertial Odometry and Mapping: Perceptive and Connective SLAM</description>

  <maintainer email="gjulian@uos.de">Julian Gaal</maintainer>

  <author>Kenny J. Chen</author>
  <author>Ryan Nemiroff</author>
  <author>Brett T. Lopez</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>backward_ros</depend>

  <export>
  </export>

</package>
